--- a/generated_yaml/gpip_reg.yaml
+++ b/generated_yaml/gpip_reg.yaml
@@ -1,5 +1,4 @@
 gpadc_config:
-  description: gpadc_config
   addressOffset: 0x0
   resetValue: 0x00000000
   fields:
@@ -80,7 +79,6 @@ gpadc_config:
       bitWidth: 8
       access: read-only
 gpadc_dma_rdata:
-  description: gpadc_dma_rdata
   addressOffset: 0x4
   resetValue: 0x00000000
   fields:
@@ -93,7 +91,6 @@ gpadc_dma_rdata:
       bitWidth: 6
       access: read-only
 gpadc_pir_train:
-  description: gpadc_pir_train
   addressOffset: 0x20
   resetValue: 0x0000000F
   fields:
@@ -126,7 +123,6 @@ gpadc_pir_train:
       bitWidth: 14
       access: read-only
 gpdac_config:
-  description: gpdac_config
   addressOffset: 0x40
   resetValue: 0x00000000
   fields:
@@ -135,7 +131,6 @@ gpdac_config:
       bitWidth: 1
       access: read-write
 gpdac_dma_config:
-  description: gpdac_dma_config
   addressOffset: 0x44
   resetValue: 0x00000000
   fields:
@@ -160,12 +155,10 @@ gpdac_dma_config:
       bitWidth: 24
       access: read-only
 gpdac_dma_wdata:
-  description: gpdac_dma_wdata
   addressOffset: 0x48
   resetValue: 0x00000000
   fields:
 gpdac_tx_fifo_status:
-  description: gpdac_tx_fifo_status
   addressOffset: 0x4C
   resetValue: 0x00000080
   fields:
@@ -181,11 +174,11 @@ gpdac_tx_fifo_status:
       bitOffset: 2
       bitWidth: 2
       access: read-only
-    TxFifoRdPtr:
+    txfifordptr:
       bitOffset: 4
       bitWidth: 4
       access: read-only
-    TxFifoWrPtr:
+    txfifowrptr:
       bitOffset: 8
       bitWidth: 2
       access: read-only
